# phrase-translator

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml
phrase_translator/: __init__.py  dictionary_sources.py  phrase_translator.py  types.py
resources/: test.dict
tests/: test_phrase_translator.py  test_types.py
tests/resources/: test_dump.json
