[tool.poetry]
name = "phrase-translator"
version = "0.1.1"
description = "A very simple package to translate single words and phrases between different languages."
readme = "README.md"
authors = ["Fabian Richter <me@fr2501.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pre-commit = "^2.20.0"
tox = "^3.25.1"
black = "^22.6.0"
mccabe = "0.6.1"
flake8 = "^4.0.1"
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
